syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
option java_package = "com.orangetalents";
option java_outer_classname = "KeyManagerGRPC";

package com.orangetalents;

service KeyManagerGRPCService {
  rpc cadastrar (CadastrarChavePixRequest) returns (CadastrarChavePixReply) {}
}
service DeletarGRPCService {
  rpc deletar (DeletarChavePixRequest) returns (DeletarChavePixReply) {}
}
service ConsultarService{
  rpc consultar (ConsultaRequest) returns (ConsultaReply) {}
}
service ConsultarTodasAsChaves{
  rpc lista(ListaChavePixRequest) returns (ListaChavePixResponse) {}
}
//Messages para consultar todas as chaves pix
message ListaChavePixRequest {
  string clienteId = 1;
}
message ListaChavePixResponse{
  message ChavesPix {
    string pixId = 1;
    TipoChave tipo = 2;
    string chave = 3;
    TipoConta comta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }
  string clienteId = 1;
  repeated ChavesPix chaves = 2;
}
// Messages para consultar
message ConsultaRequest {
  message ConsultaRequestInterno{
    string clientId = 1;
    string pixId = 2;
  }

  oneof filtro {
    ConsultaRequestInterno pixId = 1;
    string chave = 2;
  }
}
message ConsultaReply {
  message ChavePixRequest {
    message ContaInfo {
      string tipo = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }
    string tipoChave = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }
  string clienteId = 1;
  string pixId = 2;
  ChavePixRequest chave = 3;
}

// Messages para deletar
message DeletarChavePixRequest {
  string chavePixId = 1;
  string titularId = 2;
}
message DeletarChavePixReply{
  string mensagem = 1;
}

// Messages para Cadastro
enum TipoChave{
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}
enum TipoConta{
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}
message CadastrarChavePixRequest {
  string codigoInterno = 1;
  TipoChave tipoChave = 2;
  TipoConta tipoConta = 3;
  string valorChave = 4;
}
message CadastrarChavePixReply {
  string pix_id = 1;
}